app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <fields>
        <fullName>AccountId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssistantName</fullName>
    </fields>
    <fields>
        <fullName>AssistantPhone</fullName>
    </fields>
    <fields>
        <fullName>Backup_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Backup External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Unique_Id__c</fullName>
        <label>Backup Unique Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate</fullName>
    </fields>
    <fields>
        <fullName>ContactMetadataTest__c</fullName>
        <description>Used only fir test metaData modify functionality</description>
        <label>ContactMetadataTest</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department</fullName>
    </fields>
    <fields>
        <fullName>Description</fullName>
    </fields>
    <fields>
        <fullName>DoNotCall</fullName>
    </fields>
    <fields>
        <fullName>Email</fullName>
    </fields>
    <fields>
        <fullName>Fax</fullName>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail</fullName>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax</fullName>
    </fields>
    <fields>
        <fullName>HomePhone</fullName>
    </fields>
    <fields>
        <fullName>IndividualId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jigsaw</fullName>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate</fullName>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate</fullName>
    </fields>
    <fields>
        <fullName>LeadSource</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingAddress</fullName>
    </fields>
    <fields>
        <fullName>MobilePhone</fullName>
    </fields>
    <fields>
        <fullName>Name</fullName>
    </fields>
    <fields>
        <fullName>OtherAddress</fullName>
    </fields>
    <fields>
        <fullName>OtherPhone</fullName>
    </fields>
    <fields>
        <fullName>OwnerId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone</fullName>
    </fields>
    <fields>
        <fullName>ReportsToId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title</fullName>
        <inlineHelpText>Title Description</inlineHelpText>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>