app/main/default/objects/Contact/fields/ContactMetadataTest__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>ContactMetadataTest__c</fullName>
        <description>Used only fir test metaData modify functionality</description>
        <label>ContactMetadataTest</label>
        <length>225</length>
        <type>Text</type>
    </fields>
</CustomObject>