app/main/default/objects/Contact/fields/Languages__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>