app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
</CustomObject>