app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
</CustomObject>